--- a/SD_WLAN/list.htm
+++ b/SD_WLAN/list.htm
@@ -1,1 +1,59 @@
-D:/SD_WLAN/list.htm
+<!DOCTYPE html>
+<!--
+bfaos (Better FlashAir OS) version 1.0
+
+Copyright (C) mr_chainman (techspider) 2018.
+https://github.com/techspider/bfaos
+-->
+<html>
+<head>
+    <title id="title">/</title>
+    <script src="/private_bfaos/CONFIG.js"></script>
+    <link rel="stylesheet" href="/private_bfaos/file_browser/css/fs-browser.css">
+    <link id="icon" rel="stylesheet" href="/private_bfaos/file_browser/css/default-icons.css">
+    <link rel="stylesheet" href="/private_bfaos/file_browser/css/ctxmenu.css">
+    <script>
+    var wlansd = [];
+    <!--WLANSDJLST-->
+    </script>
+</head>
+<body>
+    <nav class="navbar">
+        <div id="nav-title" class="navbar-title"></div>
+        <div class="right">
+            <div class="nav-icon" onclick="window.location = '/private_bfaos/settings.html'">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 20 20"><path fill="none" d="M0 0h20v20H0V0z"/><path d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z" fill="#FFFFFF"/></svg>
+            </div>
+            <div class="nav-icon" onclick="UIDialog.NewDirDialog.Show()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path fill="#FFFFFF" d="M20 6h-8l-2-2H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-1 8h-3v3h-2v-3h-3v-2h3V9h2v3h3v2z"/></svg>
+            </div>
+            <div class="nav-icon" onclick="window.location.href = '/upload.cgi';">
+                <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="#FFFFFF" d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" />
+                </svg>
+            </div>
+        </div>
+    </nav>
+    <div id="ctxmenu" class="menu">
+        <ul id="ctxm-options" class="menu-options">
+            
+        </ul>
+    </div>
+    <table style="width:100%" class="fs-view">
+        <tr>
+        <th align="left">File Name</th>
+        <th align="left">File Type</th> 
+        <th align="left">File Size</th>
+        </tr>
+        <!--<tr>
+            <td><a href="CONFIG">test</a></td>
+            <td>text file</td>
+            <td>50 MB</td>
+        </tr>-->
+    </table>
+    
+    <script src="/private_bfaos/file_browser/js/fs-browser.js"></script>
+    <script src="/private_bfaos/file_browser/js/fs-browser-dlg.js"></script>
+    <script src="/private_bfaos/file_browser/js/ctxmenu.js"></script>
+</body>
+</html>
