Add first options

--- a/private_bfaos/settings.html
+++ b/private_bfaos/settings.html
@@ -10,6 +10,8 @@
         </div>
         <div class="content">
             <h3>File Browser</h3>
+            <input id="showHidden" type="checkbox" name="showhidden" value="hidden"> Show Hidden Files<br>
+            <input id="showSystem" type="checkbox" name="showsystem" value="hidden"> Show System Content (ex: /private_bfaos)<br>
         </div>
         <script src="/private_bfaos/resources/settings/js/settings.js"></script>
     </body>
