--- a/private_bfaos/settings.html
+++ b/private_bfaos/settings.html
@@ -10,8 +10,19 @@
         </div>
         <div class="content">
             <h3>File Browser</h3>
+            <h4>Appearance</h4>
+            Theme: <input id="theme" type="text" value="default"><br>
+            View: <select>
+                <option value="list">List</option>
+                <option value="icons">Icons</option>
+            </select>
+            <br>
+
+            <h4>Browsing</h4>
             <input id="showHidden" type="checkbox" name="showhidden" value="hidden"> Show Hidden Files<br>
             <input id="showSystem" type="checkbox" name="showsystem" value="hidden"> Show System Content (ex: /private_bfaos)<br>
+            
+
         </div>
         <script src="/private_bfaos/resources/settings/js/settings.js"></script>
     </body>
